// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextureInspector prepare currentSelectSource test component snapshot test texture inspector->show default value 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <div
        className=""
      >
        <h1>
          Texture
        </h1>
        <hr />
        <div
          className=""
        >
          <article
            className="wonder-string-input"
          >
            <span
              className="component-label"
            >
              name : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="texture3"
            />
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapS Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapT Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Mag Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Min Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`TextureInspector prepare currentSelectSource test texture change filter test set MagFilter to LINEAR_MIPMAP_LINEAR test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <div
        className=""
      >
        <h1>
          Texture
        </h1>
        <hr />
        <div
          className=""
        >
          <article
            className="wonder-string-input"
          >
            <span
              className="component-label"
            >
              name : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="texture3"
            />
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapS Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapT Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Mag Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="5"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Min Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`TextureInspector prepare currentSelectSource test texture change filter test set MagFilter to Linear_mipmap_linear test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <div
        className=""
      >
        <h1>
          Texture
        </h1>
        <hr />
        <div
          className=""
        >
          <article
            className="wonder-string-input"
          >
            <span
              className="component-label"
            >
              name : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="texture3"
            />
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapS Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                Repeat
              </option>
              <option
                value="1"
              >
                Mirrored_repeat
              </option>
              <option
                value="0"
              >
                Clamp_to_edge
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapT Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                Repeat
              </option>
              <option
                value="1"
              >
                Mirrored_repeat
              </option>
              <option
                value="0"
              >
                Clamp_to_edge
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Mag Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="5"
            >
              <option
                value="0"
              >
                Nearest
              </option>
              <option
                value="1"
              >
                Linear
              </option>
              <option
                value="2"
              >
                Nearest_mipmap_nearest
              </option>
              <option
                value="3"
              >
                Linear_mipmap_nearest
              </option>
              <option
                value="4"
              >
                Nearest_mipmap_linear
              </option>
              <option
                value="5"
              >
                Linear_mipmap_linear
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Min Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                Nearest
              </option>
              <option
                value="1"
              >
                Linear
              </option>
              <option
                value="2"
              >
                Nearest_mipmap_nearest
              </option>
              <option
                value="3"
              >
                Linear_mipmap_nearest
              </option>
              <option
                value="4"
              >
                Nearest_mipmap_linear
              </option>
              <option
                value="5"
              >
                Linear_mipmap_linear
              </option>
            </select>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`TextureInspector prepare currentSelectSource test texture change filter test set MinFilter to NEAREST_MIPMAP_LINEAR test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <div
        className=""
      >
        <h1>
          Texture
        </h1>
        <hr />
        <div
          className=""
        >
          <article
            className="wonder-string-input"
          >
            <span
              className="component-label"
            >
              name : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="texture3"
            />
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapS Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapT Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Mag Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Min Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="4"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`TextureInspector prepare currentSelectSource test texture change filter test set MinFilter to Nearest_mipmap_linear test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <div
        className=""
      >
        <h1>
          Texture
        </h1>
        <hr />
        <div
          className=""
        >
          <article
            className="wonder-string-input"
          >
            <span
              className="component-label"
            >
              name : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="texture3"
            />
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapS Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                Repeat
              </option>
              <option
                value="1"
              >
                Mirrored_repeat
              </option>
              <option
                value="0"
              >
                Clamp_to_edge
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapT Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                Repeat
              </option>
              <option
                value="1"
              >
                Mirrored_repeat
              </option>
              <option
                value="0"
              >
                Clamp_to_edge
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Mag Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                Nearest
              </option>
              <option
                value="1"
              >
                Linear
              </option>
              <option
                value="2"
              >
                Nearest_mipmap_nearest
              </option>
              <option
                value="3"
              >
                Linear_mipmap_nearest
              </option>
              <option
                value="4"
              >
                Nearest_mipmap_linear
              </option>
              <option
                value="5"
              >
                Linear_mipmap_linear
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Min Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="4"
            >
              <option
                value="0"
              >
                Nearest
              </option>
              <option
                value="1"
              >
                Linear
              </option>
              <option
                value="2"
              >
                Nearest_mipmap_nearest
              </option>
              <option
                value="3"
              >
                Linear_mipmap_nearest
              </option>
              <option
                value="4"
              >
                Nearest_mipmap_linear
              </option>
              <option
                value="5"
              >
                Linear_mipmap_linear
              </option>
            </select>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`TextureInspector prepare currentSelectSource test texture change wrap test set wrapS to REPEAT test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <div
        className=""
      >
        <h1>
          Texture
        </h1>
        <hr />
        <div
          className=""
        >
          <article
            className="wonder-string-input"
          >
            <span
              className="component-label"
            >
              name : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="texture3"
            />
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapS Mode
            </span>
            <select
              onChange={[Function]}
              value="2"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapT Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Mag Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Min Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`TextureInspector prepare currentSelectSource test texture change wrap test set wrapS to Repeat test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <div
        className=""
      >
        <h1>
          Texture
        </h1>
        <hr />
        <div
          className=""
        >
          <article
            className="wonder-string-input"
          >
            <span
              className="component-label"
            >
              name : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="texture3"
            />
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapS Mode
            </span>
            <select
              onChange={[Function]}
              value="2"
            >
              <option
                value="2"
              >
                Repeat
              </option>
              <option
                value="1"
              >
                Mirrored_repeat
              </option>
              <option
                value="0"
              >
                Clamp_to_edge
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapT Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                Repeat
              </option>
              <option
                value="1"
              >
                Mirrored_repeat
              </option>
              <option
                value="0"
              >
                Clamp_to_edge
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Mag Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                Nearest
              </option>
              <option
                value="1"
              >
                Linear
              </option>
              <option
                value="2"
              >
                Nearest_mipmap_nearest
              </option>
              <option
                value="3"
              >
                Linear_mipmap_nearest
              </option>
              <option
                value="4"
              >
                Nearest_mipmap_linear
              </option>
              <option
                value="5"
              >
                Linear_mipmap_linear
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Min Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                Nearest
              </option>
              <option
                value="1"
              >
                Linear
              </option>
              <option
                value="2"
              >
                Nearest_mipmap_nearest
              </option>
              <option
                value="3"
              >
                Linear_mipmap_nearest
              </option>
              <option
                value="4"
              >
                Nearest_mipmap_linear
              </option>
              <option
                value="5"
              >
                Linear_mipmap_linear
              </option>
            </select>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`TextureInspector prepare currentSelectSource test texture change wrap test set wrapT to MIRRORED_REPEAT test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <div
        className=""
      >
        <h1>
          Texture
        </h1>
        <hr />
        <div
          className=""
        >
          <article
            className="wonder-string-input"
          >
            <span
              className="component-label"
            >
              name : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="texture3"
            />
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapS Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapT Mode
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="2"
              >
                REPEAT
              </option>
              <option
                value="1"
              >
                MIRRORED_REPEAT
              </option>
              <option
                value="0"
              >
                CLAMP_TO_EDGE
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Mag Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Min Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                NEAREST
              </option>
              <option
                value="1"
              >
                LINEAR
              </option>
              <option
                value="2"
              >
                NEAREST_MIPMAP_NEAREST
              </option>
              <option
                value="3"
              >
                LINEAR_MIPMAP_NEAREST
              </option>
              <option
                value="4"
              >
                NEAREST_MIPMAP_LINEAR
              </option>
              <option
                value="5"
              >
                LINEAR_MIPMAP_LINEAR
              </option>
            </select>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`TextureInspector prepare currentSelectSource test texture change wrap test set wrapT to Mirrored_repeat test snapshot 1`] = `
<article
  className="wonder-inspector-component"
>
  <article
    className="wonder-inspector-assetTree"
  >
    <article
      className="wonder-texture-assetTree"
    >
      <div
        className=""
      >
        <h1>
          Texture
        </h1>
        <hr />
        <div
          className=""
        >
          <article
            className="wonder-string-input"
          >
            <span
              className="component-label"
            >
              name : 
            </span>
            <input
              className="input-component float-input"
              onBlur={[Function]}
              onChange={[Function]}
              type="text"
              value="texture3"
            />
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapS Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="2"
              >
                Repeat
              </option>
              <option
                value="1"
              >
                Mirrored_repeat
              </option>
              <option
                value="0"
              >
                Clamp_to_edge
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              WrapT Mode
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="2"
              >
                Repeat
              </option>
              <option
                value="1"
              >
                Mirrored_repeat
              </option>
              <option
                value="0"
              >
                Clamp_to_edge
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Mag Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="1"
            >
              <option
                value="0"
              >
                Nearest
              </option>
              <option
                value="1"
              >
                Linear
              </option>
              <option
                value="2"
              >
                Nearest_mipmap_nearest
              </option>
              <option
                value="3"
              >
                Linear_mipmap_nearest
              </option>
              <option
                value="4"
              >
                Nearest_mipmap_linear
              </option>
              <option
                value="5"
              >
                Linear_mipmap_linear
              </option>
            </select>
          </article>
        </div>
        <div
          className=""
        >
          <article
            className="wonder-select"
          >
            <span
              className=""
            >
              Min Filter Mode
            </span>
            <select
              onChange={[Function]}
              value="0"
            >
              <option
                value="0"
              >
                Nearest
              </option>
              <option
                value="1"
              >
                Linear
              </option>
              <option
                value="2"
              >
                Nearest_mipmap_nearest
              </option>
              <option
                value="3"
              >
                Linear_mipmap_nearest
              </option>
              <option
                value="4"
              >
                Nearest_mipmap_linear
              </option>
              <option
                value="5"
              >
                Linear_mipmap_linear
              </option>
            </select>
          </article>
        </div>
      </div>
    </article>
  </article>
</article>
`;

exports[`TextureInspector prepare currentSelectSource test texture rename test snapshot test rename to specific name 1`] = `
<article
  className="wonder-asset-component"
>
  <div
    className="asset-tree"
  >
    <article
      className="wonder-asset-header"
    >
      <div
        className="header-item"
      >
        <button
          onClick={[Function]}
        >
          addFolder
        </button>
      </div>
      <div
        className="header-item"
      >
        <button
          disabled={false}
          onClick={[Function]}
        >
          remove
        </button>
      </div>
      <div
        className="header-item"
      >
        <input
          className="file-upload"
          multiple={true}
          onChange={[Function]}
          type="file"
        />
      </div>
      <div
        className=""
      >
        <button
          onClick={[Function]}
        >
          addMaterial
        </button>
      </div>
    </article>
    <article
      className="wonder-asset-assetTree"
    >
      <ul
        className="wonder-tree-node"
      >
        <li
          onClick={[Function]}
          style={
            Object {
              "background": "#c0c0c0",
            }
          }
        >
          <div
            className="item-ground"
            draggable={true}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDrop={[Function]}
          />
          <img
            src="./public/img/12.jpg"
          />
          Asset
        </li>
        <ul
          className="wonder-tree-node"
          draggable={true}
          onDragEnd={[Function]}
          onDragStart={[Function]}
        >
          <li
            onClick={[Function]}
            style={
              Object {
                "border": "1px solid red",
              }
            }
          >
            <div
              className="item-ground"
              draggable={true}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
            />
            <img
              src="./public/img/12.jpg"
            />
            newFolder
          </li>
        </ul>
        <ul
          className="wonder-tree-node"
          draggable={true}
          onDragEnd={[Function]}
          onDragStart={[Function]}
        >
          <li
            onClick={[Function]}
            style={
              Object {
                "border": "1px solid red",
              }
            }
          >
            <div
              className="item-ground"
              draggable={true}
              onDragEnter={[Function]}
              onDragLeave={[Function]}
              onDragOver={[Function]}
              onDrop={[Function]}
            />
            <img
              src="./public/img/12.jpg"
            />
            newFolder
          </li>
        </ul>
      </ul>
    </article>
  </div>
  <article
    className="wonder-asset-assetChildren"
  >
    <article
      className="wonder-asset-folderBox"
      id="folder-4"
      style={
        Object {
          "border": "1px solid red",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <img
        src="./public/img/11.jpg"
      />
      <span
        className="item-text"
      >
        newFolder
      </span>
    </article>
    <article
      className="wonder-asset-folderBox"
      id="folder-5"
      style={
        Object {
          "border": "1px solid red",
        }
      }
    >
      <div
        className="item-ground"
        draggable={true}
        onDragEnd={[Function]}
        onDragEnter={[Function]}
        onDragLeave={[Function]}
        onDragOver={[Function]}
        onDragStart={[Function]}
        onDrop={[Function]}
      />
      <img
        src="./public/img/11.jpg"
      />
      <span
        className="item-text"
      >
        newFolder
      </span>
    </article>
    <article
      className="wonder-asset-fileBox item-active"
      onClick={[Function]}
    >
      <img
        onDragStart={[Function]}
        src="texture3img"
      />
      <span
        className="item-text"
      >
        newTextureName
      </span>
    </article>
    <article
      className="wonder-asset-fileBox "
      onClick={[Function]}
    >
      <img
        onDragStart={[Function]}
        src="./public/img/12.jpg"
      />
      <span
        className="item-text"
      >
        json.json
      </span>
    </article>
    <article
      className="wonder-asset-fileBox "
      onClick={[Function]}
    >
      <img
        onDragStart={[Function]}
        src="texture5img"
      />
      <span
        className="item-text"
      >
        texture5
      </span>
    </article>
  </article>
</article>
`;
